<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SEssential</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Mminus">M-</string>
    <string name="Mplus">M+</string>
    <string name="MR">MR</string>
    <string name="MC">MC</string>
    <string name="BS">BS</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="divide">/</string>
    <string name="clear">C</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="multiply">*</string>
    <string name="mod">%</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="minus">-</string>
    <string name="addsub">âˆš</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="plussub">+/-</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="squareroot">√</string>
    <string name="square">x²</string>
    <string name="translation_text_view">Type Text to translate</string>
    <string name="about">About</string>
    <string name="title">Title : </string>
    <string name="menu_delete">Delete Item</string>
    <string name="no_title">No Title</string>
    <string name="edit_note">Edit Note</string>
    <string name="save_menu_noteedit">Save</string>
    <string name="delete_menu_noteedit">Delete</string>
    <string name="display">0</string>


</resources>
