<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtCalc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:singleLine="true"
        android:text="@string/display"
        android:textSize="56sp"
        android:textStyle="bold"
        android:background="#ff000000"
        android:textColor="#ffffffff" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnMP"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/Mplus"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#ffffffff"
            android:background="#ff00ffff" />

        <Button
            android:id="@+id/btnMM"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/Mminus"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#ffffffff"
            android:background="#ff00ffff" />

        <Button
            android:id="@+id/btnMR"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/MR"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#ffffffff"
            android:background="#ff00ffff" />

        <Button
            android:id="@+id/btnMC"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/MC"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#ffffffff"
            android:background="#ff00ffff" />

        <Button
            android:id="@+id/btnBS"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/BS"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#ffffffff"
            android:background="#ff00ffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/seven"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#ffffffff"
            android:background="#ff606860" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/eight"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#ffffffff"
            android:background="#ff606860" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/nine"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#ffffffff"
            android:background="#ff606860" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/divide"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#ffffffff"
            android:background="#ff000000" />

        <Button
            android:id="@+id/btnC"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/clear"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#ffffffff"
            android:background="#ff000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnFour"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/four"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#ffffffff"
            android:background="#ff606860" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/five"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#ffffffff"
            android:background="#ff606860" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/six"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#ffffffff"
            android:background="#ff606860" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/multiply"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#ffffffff"
            android:background="#ff000000" />

        <Button
            android:id="@+id/btnPow"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/square"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#ffffffff"
            android:background="#ff000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnOne"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/one"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#ffffffff"
            android:background="#ff606860" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/two"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#ffffffff"
            android:background="#ff606860" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/three"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#ffffffff"
            android:background="#ff606860" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/minus"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#ffffffff"
            android:background="#ff000000" />

        <Button
            android:id="@+id/btnSqrRoot"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/squareroot"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#ffffffff"
            android:background="#ff000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnZero"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/zero"
            android:textSize="23sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#ffffffff"
            android:background="#ff606860" />

        <Button
            android:id="@+id/btnDecimal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/dot"
            android:textSize="23sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#ffffffff"
            android:background="#ff000000" />

        <Button
            android:id="@+id/btnPM"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/plussub"
            android:textSize="23sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#ffffffff"
            android:background="#ff000000" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/plus"
            android:textSize="23sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#ffffffff"
            android:background="#ff000000" />

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/equals"
            android:textSize="23sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#ffffffff"
            android:background="#ffffd800" />
    </LinearLayout>

</LinearLayout>
